--- a/index.html
+++ b/index.html
@@ -37,32 +37,32 @@
       <button id="getQuote" class="btn hvr-shrink btn-lg">
         Get Inspire!
       </button>
-    </div>
     <div class="footer">
-    <div class="footing">
-        <div class="contact">
-          <div>
-            <a href="https://www.andrewmundy.net" class="hvr-button-hover">
-              <i class="fa fa-laptop" aria-hidden="true"></i> andrewmundy.net</a>
-            </div>
+      <div class="footing">
+          <div class="contact">
             <div>
-              <a href="mailto:andrewmundy@gmail.com" class="hvr-button-hover">
-                <i class="fa fa-envelope" aria-hidden="true"></i> andrewmundy@gmail.com</a>
-            </div>
-            <div>
-                <a href="https://github.com/andrewmundy" class="hvr-button-hover">
-                <i class="fa fa-github" aria-hidden="true"></i> github.com/andrewmundy</a>
-            </div>
-            <div>
-              <a href="http://www.ginfoundry.com/cocktail/martini-cocktail/" class="hvr-button-hover">
-                <i class="fa fa-glass shake" aria-hidden="true"></i> Gin Stirred Twist</a>
-            </div>
-        </div>
-        <img class="logo-lower hvr-button-hover" src="/logo.svg"/>
+              <a href="https://www.andrewmundy.net" class="hvr-button-hover">
+                <i class="fa fa-laptop" aria-hidden="true"></i> andrewmundy.net</a>
+              </div>
+              <div>
+                <a href="mailto:andrewmundy@gmail.com" class="hvr-button-hover">
+                  <i class="fa fa-envelope" aria-hidden="true"></i> andrewmundy@gmail.com</a>
+              </div>
+              <div>
+                  <a href="https://github.com/andrewmundy" class="hvr-button-hover">
+                  <i class="fa fa-github" aria-hidden="true"></i> github.com/andrewmundy</a>
+              </div>
+              <div>
+                <a href="http://www.ginfoundry.com/cocktail/martini-cocktail/" class="hvr-button-hover">
+                  <i class="fa fa-glass shake" aria-hidden="true"></i> Gin Stirred Twist</a>
+              </div>
+          </div>
+          <img class="logo-lower hvr-button-hover" src="./logo.svg"/>
+      </div>
+      <div class="copy">© Andrew Mundy SF, CA 2016</div>
     </div>
-    <div class="copy">© Andrew Mundy SF, CA 2016</div>
-</div>
 <script src="js/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+</div>
 </body>
 </html>
