--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <i class="fa fa-glass shake" aria-hidden="true"></i> Gin Stirred Twist</a>
               </div>
           </div>
-          <img class="logo-lower hvr-button-hover" src="./logo.svg"/>
+          <img class="img-responsive center-block logo-lower" src="logo.png">
       </div>
       <div class="copy">© Andrew Mundy SF, CA 2016</div>
     </div>
