--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="footing">
           <div class="contact">
             <div>
-              <a href="https://www.andrewmundy.net" class="hvr-button-hover">
+              <a href="https://andrewmundy.net" class="hvr-button-hover">
                 <i class="fa fa-laptop" aria-hidden="true"></i> andrewmundy.net</a>
               </div>
               <div>
