--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="poke.png" class="loader hvr-wobble-to-top-right"></img><br>Loading...
       </div>
 
-      <button id="getQuote" class="btn hvr-shrink btn-lg">
+      <button id="getQuote" class="btn button-press btn-lg">
         Get Inspire!
       </button>
     <div class="footer">
