--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
         <div id="back" class=""></div>
       </div>
 
-      <div class="translate hvr-bob pop">
+      <div id="point" class="translate hvr-bob pop">
         <h1>👆<h1>
         <h6><small><i>touch to translate</i></small></h6>
       </div>
 
       <div class="message">
-        <img src="poke.png" class="loader hvr-wobble-to-top-right"></img><br>Loading...
+        <div class="quote">
+        </div>
+        <div id="loader">
+          <img src="poke.png" class="loader hvr-wobble-to-top-right"></img><br>Loading...
+        </div>
       </div>
 
       <button id="getQuote" class="btn button-press btn-lg">
@@ -58,8 +62,13 @@
               </div>
           </div>
       </div>
-      <div class="copy">© Andrew Mundy SF, CA 2016</div>
+      <div class="jack">
+        <p>Quote translaltions utilize the <a href="https://github.com/andrewmundy/jackhandeyapi">JackhandeyAPI </a>
+          <br>
+          w8 but what is a <a href="https://www.youtube.com/watch?v=8ax96iVmTCI&list=PLfpbZvWz5uKsMnGlsoDUnXjn_TfrGBJKO&index=4">Jack Handey</a>?</p>
+        </div>
     </div>
+    <div class="jack">© Andrew Mundy SF, CA 2016</div>
 <script src="js/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 </div>
