--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="/screenshot.png"/>
     <title>Inspirational Pokémon Quotes</title>
+
+    <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
+
     <script src="https://use.fontawesome.com/6c7cf6fe39.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mediaqueries.css">
     <link href="css/hover.css" rel="stylesheet" media="all">
@@ -41,34 +47,39 @@
       <button id="getQuote" class="btn button-press btn-lg">
         Get Inspire!
       </button>
-    <div class="footer">
-      <div class="footing">
-          <div class="contact">
-            <div>
-              <a href="https://andrewmundy.net" class="hvr-button-hover">
-                <i class="fa fa-laptop" aria-hidden="true"></i> andrewmundy.net</a>
-              </div>
+    <div>
+      <div class="footer">
+        <div class="footing">
+            <div class="contact">
               <div>
-                <a href="mailto:andrewmundy@gmail.com" class="hvr-button-hover">
-                  <i class="fa fa-envelope" aria-hidden="true"></i> andrewmundy@gmail.com</a>
-              </div>
-              <div>
-                  <a href="https://github.com/andrewmundy" class="hvr-button-hover">
-                  <i class="fa fa-github" aria-hidden="true"></i> github.com/andrewmundy</a>
-              </div>
-              <div>
-                <a href="http://www.ginfoundry.com/cocktail/martini-cocktail/" class="hvr-button-hover">
-                  <i class="fa fa-glass shake" aria-hidden="true"></i> Gin Stirred Twist</a>
-              </div>
-          </div>
+                <a href="https://andrewmundy.net" class="hvr-button-hover">
+                  <i class="fa fa-laptop" aria-hidden="true"></i> andrewmundy.net</a>
+                </div>
+                <div>
+                  <a href="mailto:andrewmundy@gmail.com" class="hvr-button-hover">
+                    <i class="fa fa-envelope" aria-hidden="true"></i> andrewmundy@gmail.com</a>
+                </div>
+                <div>
+                    <a href="https://github.com/andrewmundy" class="hvr-button-hover">
+                    <i class="fa fa-github" aria-hidden="true"></i> github.com/andrewmundy</a>
+                </div>
+                <div>
+                  <a href="http://www.ginfoundry.com/cocktail/martini-cocktail/" class="hvr-button-hover">
+                    <i class="fa fa-glass shake" aria-hidden="true"></i> Gin Stirred Twist</a>
+                </div>
+            </div>
+        </div>
       </div>
+    </div>
+
+    <div name="credits">
       <div class="jack">
         <p>Quote translaltions utilize the <a href="https://github.com/andrewmundy/jackhandeyapi">JackhandeyAPI </a>
           <br>
           w8 but what is a <a href="https://www.youtube.com/watch?v=8ax96iVmTCI&list=PLfpbZvWz5uKsMnGlsoDUnXjn_TfrGBJKO&index=4">Jack Handey</a>?</p>
-        </div>
+          © Andrew Mundy SF, CA 2016
+      </div>
     </div>
-    <div class="jack">© Andrew Mundy SF, CA 2016</div>
 <script src="js/index.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 </div>
