--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="footing">
             <div class="contact">
               <div>
-                <a href="https://andrewmundy.net" class="hvr-button-hover">
+                <a href="http://andrewmundy.net" class="hvr-button-hover">
                   <i class="fa fa-laptop" aria-hidden="true"></i> andrewmundy.net</a>
                 </div>
                 <div>
